--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ header {
   padding-bottom: 20px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e2e2e2;
 }
 
 header > div {
@@ -65,7 +64,7 @@ header > div {
 }
 header .head_text {
   width: 50%;
-  font-size: 25px;
+  font-size: 45px;
   justify-content: center;
 }
 header .head_btn_left {
@@ -324,4 +323,31 @@ header button {
   font-family: "Yeon Sung";
   font-weight: 400;
   line-height: 2.5;
+}
+
+/* Calender */
+.calender {
+  width: 100%;
+  height: 500px;
+  margin-top: 30px;
+}
+.days {
+  display: flex;
+  border-bottom: 1px solid #e2e2e2;
+}
+.day {
+  width: calc(100% / 7);
+  text-align: center;
+  font-size: 45px;
+}
+.dates {
+  display: flex;
+  flex-wrap: wrap;
+  height: 500px;
+}
+.date {
+  width: calc(100% / 7);
+  font-size: 20px;
+  border-bottom: 1px solid #ececec;
+  border-top: 1px solid #ececec;
 }
